<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="254dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/roxo2"
        android:hint="@string/Cadastrar"
        android:shadowColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <TextView
        android:id="@+id/txtbeeuzer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:hint="@string/Beeuzser"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:drawableTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/EMail"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/material_dynamic_neutral90"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <EditText
        android:id="@+id/edtSenha1"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/edtNome1"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:drawableTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/material_dynamic_neutral90"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

</androidx.constraintlayout.widget.ConstraintLayout>